--- a/Working Clover EFI (10.15)/CLOVER/kexts/Other/itlwm.kext/Contents/Info.plist
+++ b/Working Clover EFI (10.15)/CLOVER/kexts/Other/itlwm.kext/Contents/Info.plist
@@ -61,9 +61,9 @@
 				<key>WiFi_1</key>
 				<dict>
 					<key>password</key>
-					<string>12482085</string>
+					<string></string>
 					<key>ssid</key>
-					<string>SKYB246A</string>
+					<string></string>
 				</dict>
 				<key>WiFi_2</key>
 				<dict>
