Disable SecureBootModel - Fixes BigSur Bug
This requires OpenCore 0.6.1 and fixes the issue of having to reinstall MacOS to update from beta 6/7 to 8 or newer.

--- a/OpenCore EFI (10.15-11)/EFI/OC/config.plist
+++ b/OpenCore EFI (10.15-11)/EFI/OC/config.plist
@@ -725,6 +725,8 @@
 			<integer>0</integer>
 			<key>Vault</key>
 			<string>Optional</string>
+			<key>SecureBootModel</key>
+			<string>Disabled</string>
 		</dict>
 		<key>Tools</key>
 		<array>
