Update to OC 0.6.5

--- a/OpenCore EFI (10.15-11)/EFI/OC/config.plist
+++ b/OpenCore EFI (10.15-11)/EFI/OC/config.plist
@@ -1064,7 +1064,7 @@
 			<key>UnicodeCollation</key>
 			<false/>
 			<key>AppleSecureBoot</key>
-			<false/>
+			<true/>
 			<key>AppleImg4Verification</key>
 			<false/>
 		</dict>
