--- a/OpenCore EFI (10.15-11)/EFI/OC/config.plist
+++ b/OpenCore EFI (10.15-11)/EFI/OC/config.plist
@@ -300,6 +300,8 @@
 			<false/>
 			<key>AllowRelocationBlock</key>
 			<false/>
+			<key>ForceBooterSignature</key>
+			<false/>
 		</dict>
 		<key>Patch</key>
 		<array>
@@ -877,8 +879,6 @@
 			<false/>
 			<key>AppleDebugLog</key>
 			<false/>
-			<key>AppleEvent</key>
-			<false/>
 			<key>AppleFramebufferInfo</key>
 			<false/>
 			<key>AppleImageConversion</key>
@@ -930,6 +930,21 @@
 		<key>ReservedMemory</key>
 		<array>
 		</array>
+		<key>AppleInput</key>
+		<dict>
+			<key>AppleEvent</key>
+			<string>Builtin</string>
+			<key>CustomDelays</key>
+			<string>Auto</string>
+			<key>KeyInitialDelay</key>
+			<integer>0</integer>
+			<key>KeySubsequentDelay</key>
+			<integer>5</integer>
+			<key>PointerSpeedDiv</key>
+			<integer>1</integer>
+			<key>PointerSpeedMul</key>
+			<integer>1</integer>
+		</dict>
 	</dict>
 </dict>
 </plist>
